[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/green_grass.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/TallGrassObject.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound effects/Tree/rustle.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="TallGrassObject" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -24.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
